--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 #h1{
   font-size:35px;
   text-align:center;
-  color:black;
+  color:rgb(228, 19, 19);
   background-color:yellow;
 }
 #para1{
@@ -26,8 +26,8 @@
         color:#14d814;
     }
     #para5{
-        font-size:40px;
-        text-align:center;
+        font-size:20px;
+        text-align:right;
         color:#FF1000;
     }
     #para6{
