--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
     }
     #para9{
         font-size:30px;
-        text-align:right;
+        text-align:center;
         color:#00FF00;
     }
      #para10{
